# cookiecutter-typer-rich

./: CONTRIBUTING.md  README.md  cookiecutter.json  requirements_dev.txt
hooks/: post_gen_project.py
tests/: test_bake_project.py
{{cookiecutter.project_name}}/: .coveragerc  README.md  pyproject.toml
{{cookiecutter.project_name}}/tests/: test_version.py
{{cookiecutter.project_name}}/tests/unit/: test_cli.py  test_{{cookiecutter.package_name}}.py
{{cookiecutter.project_name}}/{{cookiecutter.package_name}}/: cli.py  {{cookiecutter.package_name}}.py
