[tool.poetry]
name = "{{cookiecutter.project_name}}"
version = "0.1.0"
description = ""
authors = ["{{cookiecutter.author_name}} <{{cookiecutter.author_email}}>"]

[tool.poetry.scripts]
{{cookiecutter.project_name}}= "{{cookiecutter.package_name}}.cli:app"

[tool.poetry.dependencies]
python = "^3.10"
typer = {extras = ["all"], version = "0.7.0"}
rich = "^12.6.0"  # typer 0.7.0 doesn't support Rich 13.0.0 and above

[tool.poetry.dev-dependencies]
pytest = "7.2.1"
pytest-mock = "3.10.0"
coverage = "7.1.0"
black = "23.1.0"
isort = "5.12.0"
mypy = "1.0.1"
flake8 = "6.0.0"

[tool.isort]
profile = "black"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
