[tool.poetry]
name = "{{cookiecutter.project_name}}"
version = "0.1.0"
description = ""
authors = ["reka <reka@hey.com>"]

[tool.poetry.scripts]
{{cookiecutter.project_name}}= "{{cookiecutter.package_name}}.cli:app"

[tool.poetry.dependencies]
python = "^3.10"
typer = {extras = ["all"], version = "0.9.0"}
rich = "^13.4"

[tool.poetry.dev-dependencies]
pytest = "7.4.0"
pytest-mock = "3.11.1"
coverage = "7.2.7"
black = "23.3.0"
isort = "5.12.0"
mypy = "1.4.1"
flake8 = "6.0.0"

[tool.isort]
profile = "black"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
